perf: tests and performance improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,22 +4,14 @@ project(CreatePanorama)
 set(CMAKE_CXX_STANDARD 20)
 
 # Find OpenCV package
-set(OpenCV_DIR "C:\\tools\\opencv\\mingw_build")
+set(OpenCV_DIR "C:/msys64/ucrt64/lib/cmake/opencv4/opencv2")
 find_package(OpenCV REQUIRED)
 
 # Include directories
-
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 # Add executable
 add_executable(CreatePanorama main.cpp ImageStitcher.cpp ImageStitcher.h)
 
 # Link OpenCV libraries to the executable
-target_link_libraries(CreatePanorama
-        ${OpenCV_LIBS}
-        opencv_core
-        opencv_imgcodecs
-        opencv_imgproc
-        opencv_stitching
-        )
-
+target_link_libraries(CreatePanorama ${OpenCV_LIBS})
